# song2graph

./: .gitignore  Dockerfile  README.md  SCHEMA.md  annotation_handler.py  clap_handler.py  colab_song2graph_clap_musicflamingo.ipynb  pyproject.toml  requirements.txt  song2graph.py  song2graph_colab_export_notebook.py  song2graph_musicflamingo_notebook.py  transcription_handler.py
