[project]
name = "song2graph"
version = "0.1.0"
description = "Music structure extraction, retrieval, and reasoning pipeline with stem separation, CLAP retrieval, transcription, and MusicFlamingo notebook hooks."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "basic-pitch==0.4.0",
  "torchcrepe==0.0.24",
  "demucs==4.0.0",
  "librosa==0.11.0",
  "matplotlib==3.10.8",
  "onnxruntime==1.23.1",
  "sf_segmenter==0.0.2",
  "soundfile==0.13.1",
  "setuptools==80.9.0",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "torchcodec==0.10.0",
  "yt_dlp==2023.2.17",
]

[project.optional-dependencies]
retrieval = [
  "laion-clap",
  "torchvision",
]
transcription = [
  "faster-whisper",
]
notebook = [
  "marimo",
]
mt3 = [
  "mt3-infer==0.1.3",
]
quantization = [
  "pyrubberband==0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

